--- a/14. TDD/tddstudy/build.gradle
+++ b/14. TDD/tddstudy/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+//    testCompile 'org.assertj:assertj-core:3.12.2'
 }
 
 test {
