[추가] SWAGGER 를 이용하여 API 제공하는 코드 추가

--- a/21. MybatisProject/ws/src/main/resources/application.yml
+++ b/21. MybatisProject/ws/src/main/resources/application.yml
@@ -9,12 +9,15 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     mapper-locations: mapper/BookMapper.xml
 
-
   data:
     web:
       pageable:
         default-page-size: 10
         max-page-size: 50
+
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 
 logging.level:
   org.hibernate.SQL: debug
