--- a/21. MybatisProject/ws/build.gradle
+++ b/21. MybatisProject/ws/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 	implementation 'javax.servlet:jstl'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
+	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'mysql:mysql-connector-java'
