--- a/25. Spring Boot Webflux/computer/src/main/resources/application.yml
+++ b/25. Spring Boot Webflux/computer/src/main/resources/application.yml
@@ -1,1 +1,11 @@
+spring:
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: testDB
 
+  webflux:
+    hiddenmethod:
+      filter:
+        enabled: true
