--- a/25. Spring Boot Webflux/computer/build.gradle
+++ b/25. Spring Boot Webflux/computer/build.gradle
@@ -22,6 +22,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.mongodb:mongodb-driver-sync'
+	implementation 'io.projectreactor.tools:blockhound:1.0.6.RELEASE'
+
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
